@@ -4,7 +4,8 @@ except ImportError:
     from django.conf.urls.defaults import patterns, include, url
 
 
-urlpatterns = patterns('',
-    url(r'^rosetta/',include('rosetta.urls')),
-    url(r'^admin/$','rosetta.tests.views.dummy', name='dummy-login')
+urlpatterns = patterns(
+    '',
+    url(r'^rosetta/', include('rosetta.urls')),
+    url(r'^admin/$', 'rosetta.tests.views.dummy', name='dummy-login')
 )
